[tool.poetry]
name = "tokens"
version = "0.1.0"
description = ""
authors = ["hoando <hoando.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gitingest = "^0.1.2"
transformers = {git = "https://github.com/huggingface/transformers"}
sentencepiece = "^0.2.0"
torch = "^2.5.1"


[tool.poetry.scripts]
start = "tokens.main:main"  # Entry point for the `tokens` module

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
